tests/snapshots/examples_fixtures/advanced__contact_book.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/advanced/contact_book.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
