tests/snapshots/examples_fixtures/advanced__list_map_filter.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/advanced/list_map_filter.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/advanced/list_map_filter.flx:34:19
   |
34 |     let doubled = map(nums, /x -> x * 2);
   |                   ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/advanced/list_map_filter.flx:38:15
   |
38 |     let big = filter(doubled, /x -> x > 2);
   |               ^^^^^^

Hint:
  Define it first: let filter = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/advanced/list_map_filter.flx:42:17
   |
42 |     let total = fold(nums, 0, /(acc, x) -> acc + x);
   |                 ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/advanced/list_map_filter.flx:57:8
   |
57 |     |> map(/x -> x * 2);
   |        ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/advanced/list_map_filter.flx:93:19
   |
93 |     let lengths = fold(words, {}, /(acc, w) -> Map.set(acc, w, len(w)));
   |                   ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `zip`.

  examples/advanced/list_map_filter.flx:131:17
    |
131 |     let pairs = zip(labels, vals);
    |                 ^^^

Hint:
  Define it first: let zip = ...;

Found 6 errors.
== stdout ==
<not executed>
