tests/snapshots/examples_fixtures/advanced__mini_database.snap
---
source: tests/examples_fixtures_snapshots.rs
assertion_line: 32
---
Fixture: examples/advanced/mini_database.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
